--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@aws-cdk/aws-codebuild": "^1.74.0",
     "@aws-cdk/aws-codepipeline": "^1.74.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.74.0",
+    "@aws-cdk/aws-lambda": "^1.74.0",
     "@aws-cdk/core": "1.74.0",
     "@aws-cdk/pipelines": "^1.74.0",
+    "@types/aws-lambda": "^8.10.64",
     "source-map-support": "^0.5.16"
   }
 }
